third_party/move/move-compiler-v2/tests/match-checks/bytestring_non_exhaustive.exp

Diagnostics:
error: match not exhaustive
  ┌─ tests/match-checks/bytestring_non_exhaustive.move:4:16
  │
4 │         match (v) {
  │                ^
  │
  = missing `_`
